FOLSPRINGB-144: add support for filtering by non-specified attribute value indicated as 'null' in Cql query